--- a/KooliProjekt/appsettings.json
+++ b/KooliProjekt/appsettings.json
@@ -8,5 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "RootPath": "wwwroot\\files\\"
 }
